--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
+    font-family: 'Dancing Script', cursive;
   }
   
   .jumbotron {
@@ -66,6 +67,17 @@ body {
   }
   
   .saveBtn i:hover {
+    font-size: 20px;
+    transition: all 0.3s ease-in-out;
+  }
+  .clearBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #034251;
+    color: white;
+  }
+  .clearBtn i:hover {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
